samples/_failures_safe/1761043906_0d162d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d13db6ea.c: In function ‘main’:
./samples/SAFE/__tmp_d13db6ea.c:157:17: error: expected expression at end of input
  157 |                 if (matrix_multiply(&a, &b, &
      |                 ^~
./samples/SAFE/__tmp_d13db6ea.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d13db6ea.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d13db6ea.c:157:17: error: expected declaration or statement at end of input
